--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ a:hover,a:active,a:focus{color:#f60;text-decoration:underline}
 歉，该网站正在承受CC攻击”请稍后......" border="0"></a></div>
 	<!-- 音乐代码 -->
 	<audio autoplay>
-	<source src="//fs.open.kugou.com/1852a91d94f8b30ff8ad42d5765abe18/5988c70e/G013/M0A/0E/15/rYYBAFUKmZaADRpmAB71Ed9zxDY258.mp3" loop="999" type="audio/mpeg">
+	<source src="//cc.httple.net/cc.mp3" loop="999" type="audio/mpeg">
         </script> 
 	<!-- 红色鼠标  喜欢带走 -->
 	<style type='text/css'>body, a, a:link{cursor:url(//cur.cursors-4u.net/cursors/cur-2/cur117.cur), default;} 
