--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!--
+<!--
 ...................o888888o.o88888888o.
 .................8888888888888888888888888o.
 ...............888::::888888888888888888888888o.
@@ -192,7 +192,7 @@ a:hover,a:active,a:focus{color:#f60;text-decoration:underline}
 .m404 {margin:100px auto; vertical-align:middle; text-align:center}
 </style>
 <div id="top">
-  <div class=""> <a href="//m.httple.net/" class="left"><img src="//img.httple.net/zzlogo.png" alt="返回"></a>
+  <div class=""> <a href="//i.httple.net" class="left"><img src="//img.httple.net/zzlogo.png" alt="返回"></a>
     <ul class="left">
       <li><a href="//my.httple.net/" title="首页">首页</a></li>
       <li><a href="//movie.httple.net/" title="电影网站">电影网站</a></li>
@@ -206,7 +206,7 @@ a:hover,a:active,a:focus{color:#f60;text-decoration:underline}
     </ul>
   </div>
 </div>
-<div class="m404"><a href="//m.httple.net/"><img src="//img.httple.net/p404.png" width="409" height="177" alt="“抱
+<div class="m404"><a href="#"><img src="//img.httple.net/p404.png" width="409" height="177" alt="“抱
 歉，该网站正在承受CC攻击”请稍后......" border="0"></a></div>
 	<!-- 音乐代码 -->
 	<audio autoplay>
